@@ -1,3 +1,7 @@
+3/2/12
+  Fix for bar length and master size not correcting after rc file is reread
+  Added option in config.h.def to have the bar shown or not at startup but still toggleable
+
 31/1/12
   Fix for bar text not updating when bar is covered and the uncovered
 
